10_DevOps/__Ref__/Docker-K8s/Advanced/49-traffic-management/deploys-v1-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
  namespace: myapp-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
        - name: myapp
          image: <YOUR_DOCKERHUB_USERNAME>/myapp:6.0
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
  namespace: myapp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
        - name: myapp
          image: <YOUR_DOCKERHUB_USERNAME>/myapp:7.0
          ports:
            - containerPort: 5000
